# code-snippet

./: Cargo.toml  README.md
examples/: add_trait_demo.rs  at_bindings_demo.rs  const_generics_demo.rs  dir_demo.rs  format_demo.rs  glob_demo.rs  lifetime_bound_demo.rs  newtype_demo.rs  pattern_demo.rs  reborrow_mut_ref_demo.rs  same_method_demo.rs
src/: main.rs
