[package]
name = "code-snippet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.1"



[[example]]
name = "dir_demo"

[[example]]
name = "glob_demo"

[[example]]
name = "pattern_demo"

[[example]]
name = "at_bindings_demo"

[[example]]
name = "reborrow_mut_ref_demo"

[[example]]
name = "const_generics_demo"

[[example]]
name = "add_trait_demo"

[[example]]
name = "same_method_demo"

[[example]]
name = "newtype_demo"

[[example]]
name = "lifetime_bound_demo"